CV: add prettier, linters, fixing errors

--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,8 @@
       <section class="wrapper dark-theme">
         <div class="content top-banner">
           <div class="top-banner__main">
-            <div class="top-banner__main-text">
-              <h1>Largest Audience. Highest engagment.</h1>
-            </div>
-            <a class="top-banner__blue-button" href="#LinksModal">
-              <span>See the magic</span>
-            </a>
+            <div class="top-banner__main-text"><h1>Largest Audience. Highest engagment.</h1></div>
+            <a class="top-banner__blue-button" href="#LinksModal"> <span>See the magic</span> </a>
             <div class="top-banner__vertical-text vertical-title">
               Created with love and patient.
             </div>
@@ -66,27 +62,23 @@
           <figure class="info-block__info">
             <figcaption>
               <h4>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Laudantium odio quaerat inventore quos libero cumque, ducimus
-                quo sit. Quod natus qui sed illo iste aspernatur ut laboriosam,
-                mollitia praesentium eius.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium odio quaerat
+                inventore quos libero cumque, ducimus quo sit. Quod natus qui sed illo iste
+                aspernatur ut laboriosam, mollitia praesentium eius.
               </h4>
               <article>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                  exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                  officia deserunt mollit anim id est laborum.
                 </p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad
-                  consequatur sunt vel nemo? Velit illo iure, molestiae
-                  praesentium facilis cum dolores eos quia consequuntur, tempora
-                  quae magni sint, facere deleniti?
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consequatur sunt vel
+                  nemo? Velit illo iure, molestiae praesentium facilis cum dolores eos quia
+                  consequuntur, tempora quae magni sint, facere deleniti?
                 </p>
               </article>
             </figcaption>
@@ -210,9 +202,7 @@
       </div>
     </footer>
     <div class="modal-block" id="LinksModal">
-      <div class="modal-content">
-        <a class="modal-content__closing-button" href="#"></a>
-      </div>
+      <div class="modal-content"><a class="modal-content__closing-button" href="#"></a></div>
     </div>
   </body>
 </html>
